force-app/main/default/objects/Opportunity/fields/Forecast_Units__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Units__c</fullName>
    <label>Forecast Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>