force-app/main/default/objects/Opportunity/fields/Quota_Variance__c.field-meta.xml
<CustomField>
    <fullName>Quota_Variance__c</fullName>
    <description
  >Dollar amount above (positive) or below (negative) quota for this opportunity. Signed metric used by the Phase 3 D3 Diverging Bar Chart so it renders a true two-sided divergence.</description>
    <label>Quota Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>